<resources>
    <string name="app_name">Memories</string>
    <string name="app_action_bar_text">memories</string>
    <string name="search_here">Search memories</string>
    <string name="clear">clear</string>
    <string name="no_data_image">no data image</string>
    <string name="add_memories">MEMORIES</string>
    <string name="memoriesContentImage">MemoriesContentImage</string>
    <string name="memories_title">MVVM Memories App?</string>
    <string name="some_text">This is simple memories app that follows MVVM architectural design pattern and uses android jetpack components.</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="back">back</string>
    <string name="edited_on">Edited on: %1$s</string>
    <string name="save">save</string>
    <string name="title">Title</string>
    <string name="memories">Memories</string>
    <string name="choose_color">choose color</string>
    <string name="take_picture">Take Picture</string>
    <string name="select_image">Select Image</string>
    <string name="delete">Delete</string>
    <string name="fileAuthority">com.elhady.memories.fileProvider</string>
    <string name="short_label">New Memories</string>
    <string name="long_label">Add New Memories</string>
    <string name="disabled_message">New Note Shortcut Disabled</string>
</resources>