<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/memoriesItemLayoutParent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="13dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/memoriesItemContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0.8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/itemMemoriesImage"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:contentDescription="@string/memoriesContentImage"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/memoriesItemTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/memoriesItemTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:ellipsize="end"
            android:fontFamily="@font/koho_light"
            android:maxLines="2"
            android:paddingStart="12dp"
            android:paddingEnd="20dp"
            android:text="@string/memories_title"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemMemoriesImage" />

        <TextView
            android:id="@+id/memoriesContentItemTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="3dp"
            android:ellipsize="end"
            android:fontFamily="@font/koho_regular"
            android:maxLines="12"
            android:paddingStart="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/memoriesItemTitle"
            tools:text="@string/some_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/noteDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_date"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/ic_calendar"
            android:drawablePadding="6dp"
            android:fontFamily="@font/koho_regular"
            android:paddingStart="10dp"
            android:paddingTop="3dp"
            android:paddingEnd="10dp"
            android:paddingBottom="3dp"
            android:text="@string/dd_mm_yyyy"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/memoriesContentItemTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>