<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetParent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheetContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bar"
            android:layout_width="40dp"
            android:layout_height="6dp"
            android:layout_margin="10dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/choose_color"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/shape_image" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/takePicture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableStart="@drawable/ic_take_a_pic"
            android:drawablePadding="10dp"
            android:focusable="true"
            android:fontFamily="@font/koho_regular"
            android:padding="12dp"
            android:text="@string/take_picture"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/selectImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableStart="@drawable/ic_select_a_photo"
            android:drawablePadding="10dp"
            android:focusable="true"
            android:fontFamily="@font/koho_regular"
            android:padding="12dp"
            android:text="@string/select_image"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/takePicture" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/addColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_select_color"
            android:drawablePadding="10dp"
            android:fontFamily="@font/koho_regular"
            android:padding="12dp"
            android:text="@string/choose_color"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectImage" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addColor">

            <com.thebluealliance.spectrum.SpectrumPalette
                android:id="@+id/colorPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:spectrum_autoPadding="true"
                app:spectrum_colors="@array/color_picker"
                app:spectrum_columnCount="16"
                app:spectrum_outlineWidth="0.1dp" />

        </HorizontalScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
